# cmd_recorder

./: README.md  main.py  pyproject.toml  recorder.py  utils.py
Scripts/: activate  activate.bat  activate.fish  activate.nu  dul-receive-pack  dul-upload-pack
tests/: test_recorder.py  test_utils.py
